Domain spec now references Cluster resources (#3251)
* Domain spec now references Cluster resources

Co-authored-by: vanajamukkara <vanajakshi.mukkara@oracle.com>
Co-authored-by: Vanajakshi Mukkara <35709372+vanajamukkara@users.noreply.github.com>
Co-authored-by: Antaryami Panigrahi <31135902+anpanigr@users.noreply.github.com>
Co-authored-by: Xian Cao <xian.cao@oracle.com>
Co-authored-by: Sankar Periyathambi Neelakandan <45743425+sankarpn@users.noreply.github.com>
Co-authored-by: Maggie He <maggie.he@oracle.com>
Co-authored-by: Anthony Lai <anthony.lai@oracle.com>
Co-authored-by: Huiling Zhao <41090416+hzhao-github@users.noreply.github.com>
Co-authored-by: Marina Kogan <marina.kogan@oracle.com>
Co-authored-by: Dongbo Xiao <dongbo.xiao@oracle.com>
Co-authored-by: Anil Kedia <anil.kedia@oracle.com>
Co-authored-by: Tom Barnes <tom.barnes@oracle.com>
Co-authored-by: Lenny Phan <33355669+lennyphan@users.noreply.github.com>
Co-authored-by: Anil Kedia <37935279+ankedia@users.noreply.github.com>